newProject5/force-app/main/default/objects/SampleObject1__c/SampleObject1__c.object-meta.xml
<CustomObject>
    <label>SampleObject1</label>
    <nameField>
        <label>SampleObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SampleObjects1</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>