newProject5/force-app/main/default/objects/SampleObject1__c/fields/Cost_Disc__c.field-meta.xml
<CustomField>
    <fullName>Cost_Disc__c</fullName>
    <formula>Sample_Cost1__c  -   ( 0.10  *  Sample_Cost1__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Disc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>