newProject5/force-app/main/default/objects/SampleObject1__c/fields/Sample_Cost1__c.field-meta.xml
<CustomField>
    <fullName>Sample_Cost1__c</fullName>
    <label>Sample_Cost1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>