newProject5/force-app/main/default/objects/SampleObject1__c/fields/Sample_Num1__c.field-meta.xml
<CustomField>
    <fullName>Sample_Num1__c</fullName>
    <displayFormat>SAM-{00000}</displayFormat>
    <label>Sample_Num1</label>
    <type>AutoNumber</type>
</CustomField>