newProject5/force-app/main/default/objects/SampleObject1__c/validationRules/Rule_Len.validationRule-meta.xml
<ValidationRule>
    <fullName>Rule_Len</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Phone__c ) &gt; 10</errorConditionFormula>
    <errorMessage>Enter a 10 digit number</errorMessage>
</ValidationRule>